--- a/sources/package.json
+++ b/sources/package.json
@@ -14,6 +14,9 @@
     "proxy": "^0.2.4",
     "winston": "^2.1.1"
   },
+  "scripts": {
+    "postinstall": "bower install"
+  },
   "window": {
     "title": "Mustang",
     "icon": "icon.ico",
