--- a/sources/package.json
+++ b/sources/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "mustang",
-  "version": "1.1.0",
-  "description": "",
-  "main": "index.html",
-  "devDependencies": {},
+  "name": "electron-quick-start",
+  "version": "1.0.0",
+  "description": "A minimal Electron application",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron main.js"
   },
-  "author": "wantg78@gmail.com",
-  "license": "ISC",
-  "dependencies": {
-    "moment": "^2.11.1",
-    "proxy": "^0.2.4",
-    "winston": "^2.1.1"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/electron/electron-quick-start.git"
   },
-  "scripts": {
-    "postinstall": "bower install"
+  "keywords": [
+    "Electron",
+    "quick",
+    "start",
+    "tutorial"
+  ],
+  "author": "GitHub",
+  "license": "CC0-1.0",
+  "bugs": {
+    "url": "https://github.com/electron/electron-quick-start/issues"
   },
-  "window": {
-    "title": "Mustang",
-    "icon": "icon.ico",
-    "frame": true,
-    "toolbar": false,
-    "width": 1000,
-    "height": 600,
-    "min_width": 1000,
-    "min_height": 600
+  "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "devDependencies": {
+    "electron-prebuilt": "^0.37.0"
   }
 }
