--- a/sources/package.json
+++ b/sources/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "electron-quick-start",
+  "name": "sources",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "**Clone and run for a quick way to see an Electron in action.**",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron main.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
-  },
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
-  },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "electron-prebuilt": "^0.37.0"
+    "electron-prebuilt": "^0.37.5"
+  },
+  "dependencies": {
+    "moment": "^2.12.0",
+    "proxy": "^0.2.4",
+    "winston": "^2.2.0"
   }
 }
