--- a/sources/package.json
+++ b/sources/package.json
@@ -5,11 +5,13 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
+    "postinstall": "bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.7.9",
     "electron-prebuilt": "^0.37.5"
   },
   "dependencies": {
